[project]
name = 'chain_ufunc'
version = '0.1.0'
description = 'Create chains of ufuncs that calculate on chunks of data at a time'
readme = 'README.rst'
requires-python = '>=3.9'
license = { file = 'LICENSE' }
author = 'Marten H. van Kerkwijk'
dependencies = [
    "numpy",
]

[project.urls]
repository = 'https://github.com/mhvk/chain_ufunc'

[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'numpy',
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "graphviz",
]
all = [
    "graphviz",
]

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    "chain_ufunc",
    "README.rst",
]
filterwarnings = [
    "error",
]
